porter/aks-aad-oauth-proxy/manifests/oauth2-proxy-azure.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
      - name: oauth2-proxy
        image: quay.io/pusher/oauth2_proxy:latest
        imagePullPolicy: Always   
        args:
        - --provider=azure
        - --email-domain=*
        - --upstream=file:///dev/null
        - --http-address=0.0.0.0:4180        
        ports:
        - containerPort: 4180
          protocol: TCP
        resources:
          limits:
            memory: "300Mi"
            cpu: "0.2"             

---

apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    k8s-app: oauth2-proxy

---

kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: oauth2-proxy
  annotations:
    kubernetes.io/ingress.class: $INGRESS_CLASS
spec:
  rules:
  - host: $FQDN
    http:
      paths:
      - path: /oauth2     
        backend:
          serviceName: oauth2-proxy
          servicePort: 4180
  tls:
  - hosts:
    - $FQDN
    secretName: $TLS_SECRETNAME
